:bug: Move job form to page to avoid cutoff

--- a/src/components/pages/jobs/jobs.module.scss
+++ b/src/components/pages/jobs/jobs.module.scss
@@ -52,11 +52,6 @@
   color: rgba(240, 150, 103, 0.5);
   cursor: pointer;
 }
-.jobsFormContainer {
-  display: flex;
-  justify-content: center;
-  min-width: 65vw;
-}
 
 .filterWrapper {
   display: flex;
